istio/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: server
    app.kubernetes.io/instance: kof-storage
    app.kubernetes.io/name: victoria-logs-single
  name: kof-storage-victoria-logs-single-server
  namespace: kof
spec:
  ports:
    - name: http
      port: 9428
      protocol: TCP
      targetPort: http
  selector:
    app: server
    app.kubernetes.io/instance: kof-storage
    app.kubernetes.io/name: victoria-logs-single
  sessionAffinity: None
  type: ClusterIP
